# CoolerCodonOpt

./: .gitignore  LICENSE  README.md  environment.yml  requirements.txt  setup.cfg
coolercodonopt/: Optimizer.py  logger_utils.py  optimize.py  parser_utils.py  sequence_utils.py
example_data/: aa_sequence.fasta  aa_sequences.fasta  dna_sequence.fasta  dna_sequence_optimized.fasta  dna_sequence_optimized.gbk  dna_sequences.fasta  dna_sequences_optimized.fasta  dna_sequences_optimized.gbk  protein_sequence.fasta  protein_sequence_optimized.fasta  protein_sequence_optimized.gbk  protein_sequences.fasta  protein_sequences_optimized.fasta  protein_sequences_optimized.gbk
scripts/: Optimizer.py  codonopt.py  example1_optimized.txt  example2_optimized.txt  optimize.py  parser_utils.py  sequence_utils.py
tests/trials_number_optimizations/: test_minimum_sequences_200nback.sh  test_minimum_sequences_25.sh  test_minimum_sequences_50n.sh
tests/unit/: test_parser_utils.py  test_sequence_utils.py
tests/unit/fixtures/: example.fasta  example2.fasta
tests_number_optimizations/: plot_scores.py  test_minimum_sequences.sh  test_minimum_sequences_200n.sh  test_minimum_sequences_50nback.sh
