# https://setuptools.pypa.io/en/latest/index.html

[metadata]
name = CoolerCodonOpt
version = 0.0.1
author = Francisco Guzman
author_email = author@example.com
description = Codon optimization program using the dnachisel library 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/strubelab/CoolerCodonOpt
license_files = LICENSE.txt

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# package_dir =
#     = example_wrapper
packages = find:
python_requires = >=3.6
scripts =
    bin/optimize

# [options.packages.find]
# where = example_wrapper

# https://setuptools.pypa.io/en/latest/userguide/entry_point.html
# [options.entry_points]
# console_scripts =
    # optimize = coolercodonopt.optimize:function